# tide-async-graphql-mongodb

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
backend/: .env.example  Cargo.toml  README.md
backend/src/: main.rs
backend/src/dbs/: mongo.rs
backend/src/gql/: mod.rs  mutations.rs  queries.rs
backend/src/projects/: services.rs
backend/src/users/: cred.rs  models.rs  services.rs
backend/src/util/: common.rs
data/: budshome.sql
examples/: async-graphql.rs  graphql-client.rs  graphql.rs  mongodb.rs  password.rs  surf.rs
frontend-handlebars/: .env.example  Cargo.toml  README.md
frontend-handlebars/scripts/: length.rhai
frontend-handlebars/src/: main.rs
frontend-handlebars/src/routes/: mod.rs  projects.rs  users.rs
frontend-handlebars/src/util/: common.rs  constant.rs
frontend-handlebars/static/: index.html
frontend-handlebars/static/css/: style.css
frontend-handlebars/templates/: index.html
frontend-handlebars/templates/projects/: index.html
frontend-handlebars/templates/users/: index.html
frontend-wasm/: Cargo.toml
frontend-yew/: Cargo.toml  README.md  index.html
frontend-yew/assets/css/: style.css
frontend-yew/src/: main.rs
frontend-yew/src/pages/: home.rs  projects.rs  users.rs
frontend-yew/src/util/: common.rs  constant.rs
graphql/: schema.json
src/: constant.rs  main.rs  schema.rs
src/dbs/: mongo.rs
src/gql/: mod.rs  mutations.rs  queries.rs
src/projects/: models.rs  routes.rs  services.rs
src/users/: cred.rs  mod.rs  models.rs  routes.rs  services.rs
src/utils/: common.rs  constant.rs
static/: index.html
static/project/: index.html
static/user/: index.html
