[package]
name = "tide-async-graphql-mongodb"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }

dotenv = "0.15.0"
lazy_static = "1.4.0"

async-graphql = "2.4.4"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
bson = "1.1.0"
