[package]
name = "tide-async-graphql-mongodb"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
futures = "0.3.9"
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }

dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.4.3"

async-graphql = "2.4.7"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
bson = "1.1.0"
serde = { version = "1.0.118", features = ["derive"] }
chrono = "0.4.19"

jsonwebtoken = "7.2.0"
ring = "0.16.19"
base64 = "0.13.0"
