[package]
name = "frontend-yew"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
yew = "0.18.0"
yew-router = "0.15.0"

wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"

dotenv = "0.15.0"
lazy_static = "1.4.0"

graphql_client = "0.9.0"
anyhow = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
