[package]
name = "frontend-yew"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.77"
wasm-bindgen-futures = "0.4.27"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

yew = "0.18.0"
yew-router = "0.15.0"

graphql_client = "0.10.0"
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.67"
anyhow = "1.0.43"

toml = "0.5.8"
lazy_static = "1.4.0"
